@@ -800,6 +800,7 @@ export(plotViperCharts)
 export(ppv)
 export(predictLearner)
 export(reimpute)
+export(relativeOverfitting)
 export(removeConstantFeatures)
 export(removeHyperPars)
 export(repcv)
