@@ -1,10 +1,11 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/performance.R
-\name{performance}
-\alias{performance}
-\title{Measure performance of prediction.}
+% Please edit documentation in R/relativeOvertiffing.R
+\name{relativeOverfitting}
+\alias{relativeOverfitting}
+\title{Estimate relative overfitting.}
 \usage{
-performance(pred, measures, task = NULL, model = NULL, feats = NULL)
+relativeOverfitting(pred, measures, task = NULL, model = NULL,
+  feats = NULL)
 }
 \arguments{
 \item{pred}{[\code{\link{Prediction}}]\cr
@@ -15,10 +16,10 @@ Performance measure(s) to evaluate.
 Default is the default measure for the task, see here \code{\link{getDefaultMeasure}}.}
 
 \item{task}{[\code{\link{Task}}]\cr
-Learning task, might be requested by performance measure, usually not needed except for clustering.}
+Learning task.}
 
 \item{model}{[\code{\link{WrappedModel}}]\cr
-Model built on training data, might be requested by performance measure, usually not needed.}
+Model built on training data.}
 
 \item{feats}{[\code{data.frame}]\cr
 Features of predicted data, usually not needed except for clustering.
@@ -26,10 +27,11 @@ If the prediction was generated from a \code{task}, you can also pass this inste
 are extracted from it.}
 }
 \value{
-[named \code{numeric}]. Performance value(s), named by measure(s).
+[named \code{numeric}]. Relative overfitting estimate(s), named by measure(s).
 }
 \description{
-Measures the quality of a prediction w.r.t. some performance measure.
+Estimates the relative overfitting of a model as the ratio of the difference in test and train performane to the difference of test performance in the no-information case and train performance.
+In the no-information case the features carry no information with respect to the prediction. This is simulated by permuting features and predictions.
 }
 \examples{
 training.set = seq(1, nrow(iris), by = 2)
@@ -39,11 +41,15 @@ task = makeClassifTask(data = iris, target = "Species")
 lrn = makeLearner("classif.lda")
 mod = train(lrn, task, subset = training.set)
 pred = predict(mod, newdata = iris[test.set, ])
-performance(pred, measures = mmce)
+relativeOverfitting(pred, measures = mmce, task = task, model = mod)
 
-# Compute multiple performance measures at once
-ms = list("mmce" = mmce, "acc" = acc, "timetrain" = timetrain)
-performance(pred, measures = ms, task, mod)
+lrn2 = makeLearner("classif.knn")
+mod2 = train(lrn2, task, subset = training.set)
+pred2 = predict(mod2, newdata = iris[test.set, ])
+relativeOverfitting(pred2, measures = mmce, task = task, model = mod2)
+}
+\references{
+Bradley Efron and Robert Tibshirani; Improvements on Cross-Validation: The .632+ Bootstrap Method, Journal of the American Statistical Association, Vol. 92, No. 438. (Jun., 1997), pp. 548-560.
 }
 \seealso{
 Other performance: \code{\link{G1}}, \code{\link{G2}},
@@ -81,6 +87,6 @@ Other performance: \code{\link{G1}}, \code{\link{G2}},
   \code{\link{tpr}}; \code{\link{Measure}},
   \code{\link{makeMeasure}}; \code{\link{makeCostMeasure}};
   \code{\link{makeCustomResampledMeasure}};
-  \code{\link{relativeOverfitting}}
+  \code{\link{performance}}
 }
 
